--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <pmd.version>3.6</pmd.version>
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
+        <jacoco.version>0.7.9</jacoco.version>
+        <jacoco.minimum.coverage>0.80</jacoco.minimum.coverage>
     </properties>
 
     <dependencies>
@@ -69,6 +71,47 @@
                             <goal>cpd</goal>
                             <goal>cpd-check</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- maven JaCoCo plugin -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>PACKAGE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>${jacoco.minimum.coverage}</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
