--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <mvn.compiler.plugin.verion>3.5.1</mvn.compiler.plugin.verion>
         <pmd.version>3.6</pmd.version>
-        <java.version>1.8</java.version>
-        <junit.version>4.12</junit.version>
         <jacoco.version>0.7.9</jacoco.version>
         <jacoco.minimum.coverage>0.80</jacoco.minimum.coverage>
+        <java.version>1.8</java.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
@@ -45,6 +46,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>${mvn.compiler.plugin.verion}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
