--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <pmd.version>3.6</pmd.version>
         <jacoco.version>0.7.9</jacoco.version>
         <jacoco.minimum.coverage>0.80</jacoco.minimum.coverage>
+        <cobertura.version>2.7</cobertura.version>
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
     </properties>
@@ -117,6 +118,20 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- maven Cobertura  plugin -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>${cobertura.version}</version>
+                <configuration>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                    <check/>
+                </configuration>
             </plugin>
         </plugins>
     </build>
