--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,16 @@
         <jacoco.minimum.coverage>0.80</jacoco.minimum.coverage>
         <cobertura.version>2.7</cobertura.version>
         <java.version>1.8</java.version>
+        <commons-lang3.version>3.7</commons-lang3.version>
         <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
